Mejoras en frontend

--- a/StockMasterX/Views/Products/Edit.cshtml
+++ b/StockMasterX/Views/Products/Edit.cshtml
@@ -115,9 +115,9 @@
                         <label class="form-check-label">Producto Activo</label>
                     </div>
 
-                    <div class="d-flex gap-2">
-                        <button type="button" id="updateBtn" class="btn btn-success btn-lg">💾 Guardar Cambios</button>
-                        <a asp-action="Index" class="btn btn-secondary btn-lg">❌ Cancelar</a>
+                    <div class="d-flex gap-3 mt-4">
+                        <button type="button" id="updateBtn" class="btn btn-success btn-lg">💾 GUARDAR CAMBIOS</button>
+                        <a asp-action="Index" class="btn btn-secondary btn-lg">❌ CANCELAR</a>
                     </div>
                 </div>
             </div>
