--- a/StockMasterX/Views/InventoryMovements/Edit.cshtml
+++ b/StockMasterX/Views/InventoryMovements/Edit.cshtml
@@ -85,9 +85,9 @@
                         <input type="datetime-local" id="movementDate" class="form-control" value="@Model.MovementDate.ToString("yyyy-MM-ddTHH:mm")" />
                     </div>
 
-                    <div class="d-flex gap-2">
-                        <button type="button" id="updateBtn" class="btn btn-success btn-lg">💾 Guardar Cambios</button>
-                        <a asp-action="Index" class="btn btn-secondary btn-lg">❌ Cancelar</a>
+                    <div class="d-flex gap-3 mt-4">
+                        <button type="button" id="updateBtn" class="btn btn-success btn-lg">💾 GUARDAR CAMBIOS</button>
+                        <a asp-action="Index" class="btn btn-secondary btn-lg">❌ CANCELAR</a>
                     </div>
                 </div>
             </div>
